# 2lazy4arch

./: .gitignore  Cargo.toml  README.md  install.sh  postInstall.sh
.github/workflows/: build-rust.yml  rust.yml
examples/: aur_packages.txt  packages.txt
installer/: Cargo.toml  rice
installer/src/: base_installer.rs  enums.rs  essentials.rs  filesystem_tasks.rs  lib.rs  pacman.rs  partition_table.rs  post_install.rs  utils.rs
old-shell-scripts/: README.md  install.sh  postInstall.sh
shell-iface/: Cargo.toml
shell-iface/src/: lib.rs  logger.rs
tui/: Cargo.toml
tui/src/: app.rs  essentials_events.rs  essentials_ui.rs  events_handler.rs  filesystem_events.rs  filesystem_ui.rs  install_events.rs  install_ui.rs  main.rs  main.rs.old  pacman_events.rs  pacman_ui.rs  post_install.rs  start_screen_events.rs  ui.rs  ui_utils.rs
