[package]
name = "installer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
nix = {version="0.28.0", features=["user"]}
serde = {version="1.0.201", features = ["derive"] }
serde_json = "1.0.117"
shell-iface = { path = '../shell-iface' }
