[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = { version = "0.27.0", features = ["event-stream"] }
installer = {path = "../installer"}
ratatui = "0.26.2"
chrono = "0.4"
shell-iface = {path = "../shell-iface"}
